fix text shadow on mobile

--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -128,13 +128,13 @@ input[type="text"]:focus, input[type="tel"]:focus {
 .landing h1 {
   font-size: 55px;
   margin: 0 0 20px;
-  text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.8);
+  text-shadow: 0 0 0 transparent, 1px 1px 8px rgba(0, 0, 0, 0.8);
 }
 
 .landing h2 {
   font-size: 18px;
   font-style: italic;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);
+  text-shadow: 0 0 0 transparent, 1px 1px 3px rgba(0, 0, 0, 0.8);
 }
 
 .landing .upload {
@@ -483,7 +483,8 @@ input[type="text"]:focus, input[type="tel"]:focus {
 .about main {
   margin: 50px auto;
   width: 500px;
-  text-shadow: 2px 2px 2px #000, -1px -1px 3px #6E6E6E;
+  /* http://stackoverflow.com/questions/4046142/google-chrome-text-shadow-rendering */
+  text-shadow: 0 0 0 transparent, 2px 2px 2px #000, -1px -1px 3px #6E6E6E;
 }
 
 .about main h1 {
